--- a/code/styles.css
+++ b/code/styles.css
@@ -3,7 +3,6 @@ html, body{
     width: 100vw;
     min-height: 400px;
     min-width: 400px;
-    background-color: rgb(182, 182, 182);
 }
 
 #action-bar, #email-message{
@@ -16,14 +15,19 @@ html, body{
     padding:1px;
 }
 
-#top-bar, #bottom-bar{
+#bottom-bar{
     height: 5vh;
     max-height: 5vh;
 }
 
+#top-bar {
+    height: 8vh;
+    max-height: 8vh;
+}
+
 #email-box, #email-message{
-    height: 95vh;
-    max-height: 95vh;
+    height: 92vh;
+    max-height: 92vh;
 }
 
 #top-bar, #bottom-bar, #hamburger, #bottom-bar-desktop{
@@ -51,7 +55,7 @@ html, body{
     border-radius: 5px;
 }
 
-#search-bar::placeholder{
+#search-bar::placeholder, .offcanvas-header, .offcanvas-footer{
     text-align: center;
     color:rgb(138, 43, 226);
 }
@@ -83,17 +87,17 @@ html, body{
 }
 
 
-#email-box, #email-actions, #back-button{
+#email-actions, #back-button{
     background-color: rgb(182, 182, 182);
 }
 
 #email-actions{
     overflow-x: hidden;
-    padding: 10px;
     width: 17vw;
 }
 
 #bottom-bar-desktop{
+    margin: 7px;
     padding: 10px;
 }
 
@@ -110,13 +114,35 @@ html, body{
     background-color: white;
 }
 
+.selected, #email-message{
+    border: 2px inset rgb(138, 43, 226);
+    border-radius: 10px;
+}
+
+
+/* offcanvas */
+.offcanvas-body {
+    background-color: rgb(138, 43, 226);
+    color:white;
+}
+
+#composeOffcanvas, #composeOffcanvasLG {
+    height: 50vh;
+}
+
+#offcanvasActions{
+    background-color: rgb(182, 182, 182);
+    margin: 4vh;
+    height: 319px;
+}
+
 
 /*small and xsmall display media selectors*/
 @media (max-width:768px){
 
     #email-box, #email-message{
-        height: 85vh;
-        max-height: 85vh;
+        height: 82vh;
+        max-height: 82vh;
     }
 
     #action-bar {
@@ -132,6 +158,11 @@ html, body{
     .horizontal-scroll > .btn {
         margin: 0 10px 0 10px;
         border-radius: 10px;
+    }
+
+    #offcanvasActions{
+        width:100vw;
+        margin: 0;
     }
 
 }
